--- a/index.html
+++ b/index.html
@@ -3,20 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Ankit Deepak Mistry | Data Engineer Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f4f4f4; }
+        .container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
         h1 { color: #333; }
-        a { text-decoration: none; color: blue; }
+        h2 { color: #555; }
+        p, ul { text-align: left; line-height: 1.6; }
+        ul { list-style-type: none; padding: 0; }
+        li { margin: 10px 0; }
+        a { text-decoration: none; color: #0073e6; font-weight: bold; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Portfolio</h1>
-    <p>Hello, I am <strong>[Your Name]</strong>. Here are some of my projects:</p>
-    <ul>
-        <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
-        <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
-    </ul>
-    <p>Check out my <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
+    <div class="container">
+        <h1>Ankit Deepak Mistry</h1>
+        <p>📍 Ontario, Canada | 📧 <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a> | 📞 +1 (647) 393-9601</p>
+        <h2>Objective</h2>
+        <p>Data Engineer with 5 years of experience in ETL development using Spark Scala, AWS, and big data technologies. Seeking a co-op in Data Engineering, Big Data Development, or Cloud Engineering.</p>
+
+        <h2>Skills</h2>
+        <ul>
+            <li>💻 Spark Scala, Kafka, AWS, Azure, Snowflake, Python, SQL</li>
+            <li>📊 Hadoop, Tableau, Power BI, Machine Learning, Statistics, SAS</li>
+        </ul>
+
+        <h2>Work Experience</h2>
+        <h3>Data Engineer | ValueMomentum Software Solutions Pvt. Ltd. (2022 - 2023)</h3>
+        <ul>
+            <li>Developed Spark Scala data pipelines for optimized ETL from S3 GuideWire to Postgres.</li>
+            <li>Automated ETL processes using AWS Step Functions, Lambda, and EMR.</li>
+            <li>Designed event-driven architectures with AWS EventBridge for low-latency processing.</li>
+        </ul>
+
+        <h3>Associate Consultant Data Engineer | Allstate India (2021 - 2022)</h3>
+        <ul>
+            <li>Developed streaming pipelines to process JSON data from Kafka in real time.</li>
+            <li>Built data pipelines for AWS S3 and MongoDB integration.</li>
+            <li>Optimized Spark/Scala ETL processes for faster data transformations.</li>
+        </ul>
+
+        <h2>Projects</h2>
+        <p>🚗 <strong>Motor Car Price Prediction:</strong> Developed a predictive model using car sales data from <em>cardekho.com</em> to estimate resale values.</p>
+
+        <h2>Links</h2>
+        <ul>
+            <li>🔗 <a href="https://github.com/your-github-username" target="_blank">GitHub Profile</a></li>
+            <li>🔗 <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a></li>
+            <li>📄 <a href="https://drive.google.com/your-resume-link" target="_blank">Resume (PDF)</a></li>
+        </ul>
+
+        <h2>Extra-Curricular</h2>
+        <ul>
+            <li>🎥 Creating YouTube tutorials on data science topics.</li>
+            <li>🎸 Guitar enthusiast with weekend jam sessions.</li>
+        </ul>
+    </div>
 </body>
 </html>
