--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <li>Built data pipelines for AWS S3 and MongoDB integration.</li>
             <li>Optimized Spark/Scala ETL processes for faster data transformations.</li>
         </ul>
+        <ul>
+             <li>🔗 <a href="about.html">About Me</a></li>
+    <li>🔗 <a href="projects.html">Projects</a></li>
+    </ul>
 
         <h2>Projects</h2>
         <p>🚗 <strong>Motor Car Price Prediction:</strong> Developed a predictive model using car sales data from <em>cardekho.com</em> to estimate resale values.</p>
