--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         a { text-decoration: none; color: #0073e6; font-weight: bold; }
         a:hover { text-decoration: underline; }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
