--- a/index.html
+++ b/index.html
@@ -3,67 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankit Deepak Mistry | Data Engineer Portfolio</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f4f4f4; }
-        .container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
-        h1 { color: #333; }
-        h2 { color: #555; }
-        p, ul { text-align: left; line-height: 1.6; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin: 10px 0; }
-        a { text-decoration: none; color: #0073e6; font-weight: bold; }
-        a:hover { text-decoration: underline; }
-    </style>
+    <title>Ankit Mistry | Digital Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Ankit Deepak Mistry</h1>
-        <p>📍 Ontario, Canada | 📧 <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a> | 📞 +1 (647) 393-9601</p>
-        <h2>Objective</h2>
-        <p>Data Engineer with 5 years of experience in ETL development using Spark Scala, AWS, and big data technologies. Seeking a co-op in Data Engineering, Big Data Development, or Cloud Engineering.</p>
+        <header>
+            <h1>Welcome to My Digital Portfolio</h1>
+            <p>Data Engineer | Cloud Enthusiast | Big Data Developer</p>
+        </header>
 
-        <h2>Skills</h2>
-        <ul>
-            <li>💻 Spark Scala, Kafka, AWS, Azure, Snowflake, Python, SQL</li>
-            <li>📊 Hadoop, Tableau, Power BI, Machine Learning, Statistics, SAS</li>
-        </ul>
+        <section id="bio">
+            <h2>About Me</h2>
+            <p>👋 Hi, I’m <strong>Ankit Deepak Mistry</strong>, a passionate Data Engineer with 5 years of experience in building scalable **ETL pipelines** using **Spark, Kafka, AWS, and SQL**.</p>
+            <p>I enjoy solving complex data challenges, automating workflows, and developing cloud-native solutions.</p>
+        </section>
 
-        <h2>Work Experience</h2>
-        <h3>Data Engineer | ValueMomentum Software Solutions Pvt. Ltd. (2022 - 2023)</h3>
-        <ul>
-            <li>Developed Spark Scala data pipelines for optimized ETL from S3 GuideWire to Postgres.</li>
-            <li>Automated ETL processes using AWS Step Functions, Lambda, and EMR.</li>
-            <li>Designed event-driven architectures with AWS EventBridge for low-latency processing.</li>
-        </ul>
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <ul>
+                <li>📍 Location: Ontario, Canada</li>
+                <li>📧 Email: <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a></li>
+                <li>📞 Phone: +1 (647) 393-9601</li>
+                <li>🔗 <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></li>
+                <li>🔗 <a href="https://github.com/your-github-username" target="_blank">GitHub Profile</a></li>
+            </ul>
+        </section>
 
-        <h3>Associate Consultant Data Engineer | Allstate India (2021 - 2022)</h3>
-        <ul>
-            <li>Developed streaming pipelines to process JSON data from Kafka in real time.</li>
-            <li>Built data pipelines for AWS S3 and MongoDB integration.</li>
-            <li>Optimized Spark/Scala ETL processes for faster data transformations.</li>
-        </ul>
-        <ul>
-             <li>🔗 <a href="about.html">About Me</a></li>
-    <li>🔗 <a href="projects.html">Projects</a></li>
-    </ul>
+        <section id="resume">
+            <h2>Resume</h2>
+            <p>📄 Download my resume: <a href="resume.pdf" target="_blank">Click here</a></p>
+        </section>
 
-        <h2>Projects</h2>
-        <p>🚗 <strong>Motor Car Price Prediction:</strong> Developed a predictive model using car sales data from <em>cardekho.com</em> to estimate resale values.</p>
+        <section id="work">
+            <h2>Work Samples & Projects</h2>
+            <p>Here are some of my featured projects:</p>
+            <ul>
+                <li>🚗 <strong>Motor Car Price Prediction:</strong> <a href="https://github.com/your-github-username/motor-car-price-prediction" target="_blank">GitHub Link</a></li>
+                <li>⚡ <strong>Streaming Data Pipeline with Kafka:</strong> <a href="https://github.com/your-github-username/kafka-streaming-pipeline" target="_blank">GitHub Link</a></li>
+                <li>☁️ <strong>AWS ETL Pipeline:</strong> <a href="https://github.com/your-github-username/aws-etl-pipeline" target="_blank">GitHub Link</a></li>
+            </ul>
+            <p>View more projects on my <a href="projects.html">Projects Page</a>.</p>
+        </section>
 
-        <h2>Links</h2>
-        <ul>
-            <li>🔗 <a href="https://github.com/your-github-username" target="_blank">GitHub Profile</a></li>
-            <li>🔗 <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a></li>
-            <li>📄 <a href="https://drive.google.com/your-resume-link" target="_blank">Resume (PDF)</a></li>
-        </ul>
+        <section id="certificates">
+            <h2>Certificates & Diplomas</h2>
+            <ul>
+                <li>📜 <strong>Cloud Computing Technologies</strong> (George Brown College, Expected 2025)</li>
+                <li>📜 <strong>Business Analytics</strong> (Seneca Polytechnic College, Jan 2024 - Aug 2024)</li>
+                <li>📜 <strong>Data Science Postgraduate Diploma</strong> (Manipal University, 2020 - 2021)</li>
+            </ul>
+        </section>
 
-        <h2>Extra-Curricular</h2>
-        <ul>
-            <li>🎥 Creating YouTube tutorials on data science topics.</li>
-            <li>🎸 Guitar enthusiast with weekend jam sessions.</li>
-        </ul>
+        <section id="awards">
+            <h2>Academic Awards</h2>
+            <p>🏆 List any academic awards here (if applicable).</p>
+        </section>
+
+        <section id="transcripts">
+            <h2>Transcripts & Letters of Recommendation</h2>
+            <p>📜 <a href="transcript.pdf" target="_blank">View My Transcript</a></p>
+            <p>📜 <a href="letter_of_recommendation.pdf" target="_blank">View Letter of Recommendation</a></p>
+        </section>
+
+        <footer>
+            <p>© 2025 Ankit Deepak Mistry | Digital Portfolio</p>
+        </footer>
     </div>
 </body>
 </html>
