--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="#">LinkedIn</a>
                 <a href="#">GitHub</a>
                 <a href="#">Portfolio</a>
+                <a href="resume.pdf" target="_blank">📄 View Resume</a>
             </div>
         </div>
         
