--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             </ul>
             <div class="social-links text-center">
                 <a href="#">LinkedIn</a>
+                <a href="resume.pdf" target="_blank">Resume</a>
                 <a href="#">GitHub</a>
                 <a href="#">Portfolio</a>
-                <a href="resume.pdf" target="_blank">📄 View Resume</a>
             </div>
         </div>
         
