--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
             <div class="social-links text-center">
                 <a href="#">LinkedIn</a>
-                <a href="resume.pdf" target="_blank">Resume</a>
+                <a href="Ankit_coop.pdf" target="_blank">Resume</a>
                 <a href="#">GitHub</a>
                 <a href="#">Portfolio</a>
             </div>
