--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>📞 <strong>Phone:</strong> +1 (647) 393-9601</li>
             </ul>
             <div class="social-links text-center">
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
                 <a href="Ankit_coop.pdf" target="_blank">Resume</a>
                 <a href="#">GitHub</a>
                 <a href="#">Portfolio</a>
