--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="social-links text-center">
                 <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
                 <a href="Ankit_coop.pdf" target="_blank">Resume</a>
-                <a href="#">GitHub</a>
-                <a href="#">Portfolio</a>
+                <a href="https://github.com/ankitmistry96/" target="_blank">GitHub</a>
+                
             </div>
         </div>
         
