--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <li>📧 <strong>Email:</strong> <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a></li>
                 <li>📞 <strong>Phone:</strong> +1 (647) 393-9601</li>
             </ul>
-            <div class="social-links text-center">
+            
+                <a href="https://www.youtube.com/watch?v=6OotakZremU" target="_blank">YouTube</a>
                 <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
                 <a href="Ankit_coop.pdf" target="_blank">Resume</a>
                 <a href="https://github.com/ankitmistry96/" target="_blank">GitHub</a>
