--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                  <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
                  <a href="Ankit_coop.pdf" target="_blank">Resume</a>
                  <a href="https://github.com/ankitmistry96/" target="_blank"">GitHub</a>
-                 
+                 <a href="https://www.youtube.com/watch?v=6OotakZremU" target="_blank"">YouTube</a>
              </div>
          </div>
  
