--- a/index.html
+++ b/index.html
@@ -1,58 +1,76 @@
+
 <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Ankit Mistry | Digital Portfolio</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-     <style>
-         body { font-family: 'Poppins', sans-serif; background: #f8f9fa; }
-         .hero { background: #007bff; color: white; padding: 60px 0; text-align: center; }
-         .hero h1 { font-weight: 600; }
-         .container-card { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
-         .social-links a { margin: 0 10px; font-size: 1.2rem; color: #007bff; }
-         .social-links a:hover { color: #0056b3; }
-         .section-title { font-weight: 600; color: #333; margin-top: 30px; }
-     </style>
- </head>
- <body>
-     <div class="hero">
-         <h1>Ankit Deepak Mistry</h1>
-         <p>Data Engineer | Cloud Enthusiast | Big Data Developer</p>
-     </div>
- 
-     <div class="container mt-4">
-         <div class="container-card">
-             <h2 class="section-title">Contact Information</h2>
-             <ul class="list-unstyled">
-                 <li>📍 <strong>Location:</strong> Ontario, Canada</li>
-                 <li>📧 <strong>Email:</strong> <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a></li>
-                 <li>📞 <strong>Phone:</strong> +1 (647) 393-9601</li>
-             </ul>
-             <div class="social-links text-center">
-                 <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
-                 <a href="Ankit_coop.pdf" target="_blank">Resume</a>
-                 <a href="https://github.com/ankitmistry96/" target="_blank"">GitHub</a>
-                 <a href="https://www.youtube.com/watch?v=6OotakZremU" target="_blank"">YouTube</a>
-             </div>
-         </div>
- 
-         <div class="container-card mt-4">
-             <h2 class="section-title">Skills</h2>
-             <p>Spark Scala, Kafka, AWS, Azure, Snowflake, Python, SQL, Hadoop, Tableau, Power BI, Machine Learning</p>
-         </div>
- 
-         <div class="container-card mt-4">
-             <h2 class="section-title">Experience</h2>
-             <p><strong>Data Engineer | ValueMomentum Software Solutions Pvt. Ltd.</strong> (Sept 2022 - Dec 2023)</p>
-             <p>Developed Spark Scala ETL pipelines, automated workflows with AWS Step Functions, and optimized data processing.</p>
-             <p><strong>Associate Consultant Data Engineer | Allstate India</strong> (April 2021 - Sept 2022)</p>
-             <p>Built real-time streaming pipelines with Kafka, optimized data transformations using Spark/Scala.</p>
-         </div>
- 
-         <div class="container-card mt-4">
-             <h2 class="section-title">Projects</h2>
-             <p><strong>Motor Car Price Prediction</strong> - Built a predictive model using machine learning.</p>
-             <p><strong>Streaming Data Pipeline</strong> - Developed a real-time data ingestion pipeline using Kafka.</p>
-         </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ankit Mistry | Digital Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Poppins', sans-serif; background: #f8f9fa; }
+        .hero { background: #007bff; color: white; padding: 60px 0; text-align: center; }
+        .hero h1 { font-weight: 600; }
+        .container-card { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
+        .social-links a { margin: 0 10px; font-size: 1.2rem; color: #007bff; }
+        .social-links a:hover { color: #0056b3; }
+        .section-title { font-weight: 600; color: #333; margin-top: 30px; }
+    </style>
+</head>
+<body>
+    <div class="hero">
+        <h1>Ankit Deepak Mistry</h1>
+        <p>Data Engineer | AWS & ETL Specialist</p>
+    </div>
+
+    <div class="container mt-4">
+        <div class="container-card">
+            <h2 class="section-title">About Me</h2>
+            <p>I design and build <strong>scalable ETL pipelines</strong> on AWS to transform raw data into actionable insights. With hands-on experience in cloud architecture, data warehousing, and workflow automation, I help organizations unlock the full potential of their data.</p>
+            <h3 class="mt-3">What I Bring to the Table</h3>
+            <ul>
+                <li><strong>AWS Data Stack:</strong> Glue, Lambda, Redshift, S3, Athena, Kinesis, Step Functions, EMR</li>
+                <li><strong>ETL/ELT Development:</strong> Batch & real-time pipelines using PySpark, Airflow, and serverless workflows</li>
+                <li><strong>Data Warehousing & Lakes:</strong> Optimized storage & querying in Redshift, Snowflake, Delta Lake</li>
+                <li><strong>Infrastructure as Code (IaC):</strong> Automated deployments with Terraform & CloudFormation</li>
+                <li><strong>Programming Expertise:</strong> Production-grade Python & SQL (query tuning, UDFs, partitioning)</li>
+                <li><strong>Data Reliability:</strong> Implementing data quality checks, monitoring, and metadata management</li>
+            </ul>
+        </div>
+
+        <div class="container-card mt-4">
+            <h2 class="section-title">Contact Information</h2>
+            <ul class="list-unstyled">
+                <li>📍 <strong>Location:</strong> Ontario, Canada</li>
+                <li>📧 <strong>Email:</strong> <a href="mailto:ankitmistry9601@gmail.com">ankitmistry9601@gmail.com</a></li>
+                <li>📞 <strong>Phone:</strong> +1 (647) 393-9601</li>
+            </ul>
+            <div class="social-links text-center">
+                <a href="https://www.linkedin.com/in/ankitmistry1996/" target="_blank">LinkedIn</a>
+                <a href="Ankit_coop.pdf" target="_blank">Resume</a>
+                <a href="https://github.com/ankitmistry96/" target="_blank">GitHub</a>
+                <a href="https://www.youtube.com/watch?v=6OotakZremU" target="_blank">YouTube</a>
+            </div>
+        </div>
+
+        <div class="container-card mt-4">
+            <h2 class="section-title">Skills</h2>
+            <p>Spark Scala, Kafka, AWS, Azure, Snowflake, Python, SQL, Hadoop, Tableau, Power BI, Machine Learning</p>
+        </div>
+
+        <div class="container-card mt-4">
+            <h2 class="section-title">Experience</h2>
+            <p><strong>Data Engineer | ValueMomentum Software Solutions Pvt. Ltd.</strong> (Sept 2022 - Dec 2023)</p>
+            <p>Developed Spark Scala ETL pipelines, automated workflows with AWS Step Functions, and optimized data processing.</p>
+            <p><strong>Associate Consultant Data Engineer | Allstate India</strong> (April 2021 - Sept 2022)</p>
+            <p>Built real-time streaming pipelines with Kafka, optimized data transformations using Spark/Scala.</p>
+        </div>
+
+        <div class="container-card mt-4">
+            <h2 class="section-title">Projects</h2>
+            <p><strong>Motor Car Price Prediction</strong> - Built a predictive model using machine learning.</p>
+            <p><strong>Streaming Data Pipeline</strong> - Developed a real-time data ingestion pipeline using Kafka.</p>
+        </div>
+    </div>
+</body>
+</html>
