--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -70,6 +69,16 @@
             <h2 class="section-title">Projects</h2>
             <p><strong>Motor Car Price Prediction</strong> - Built a predictive model using machine learning.</p>
             <p><strong>Streaming Data Pipeline</strong> - Developed a real-time data ingestion pipeline using Kafka.</p>
+        </div>
+
+        <div class="container-card mt-4">
+            <h2 class="section-title">Academics & Certifications</h2>
+            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected 2025)</p>
+            <p>Relevant Coursework: Linux, Networking, Cloud Computing (AWS, Azure)</p>
+            <p><strong>Ontario College Graduate Certificate in Business Analytics, Seneca Polytechnic College</strong> (Jan 2024 - Aug 2024)</p>
+            <p>Relevant Coursework: Data Analytics, Statistics, Visualization</p>
+            <p><strong>Post Graduate Diploma in Data Science, Manipal University</strong> (2020 - 2021)</p>
+            <p>Relevant Coursework: Statistics, Machine Learning, Big Data, AI, Visualization</p>
         </div>
     </div>
 </body>
