--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">Projects</h2>
-            <p><strong>Motor Car Price Prediction</strong> - Built a predictive model using machine learning.</p>
+            <p><strong><a href="https://github.com/ankitmistry96/car_price_prediction" target="_blank">Motor Car Price Prediction</a></strong> - Built a predictive model using machine learning.</p>
             <p><strong>Streaming Data Pipeline</strong> - Developed a real-time data ingestion pipeline using Kafka.</p>
         </div>
     </div>
 </body>
 </html>
+
