--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         .social-links a { margin: 0 10px; font-size: 1.2rem; color: #007bff; }
         .social-links a:hover { color: #0056b3; }
         .section-title { font-weight: 600; color: #333; margin-top: 30px; }
+        .profile-pic { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin-bottom: 15px; }
     </style>
 </head>
 <body>
     <div class="hero">
+        <img src="profile.jpg" alt="Ankit Mistry" class="profile-pic">
         <h1>Ankit Deepak Mistry</h1>
         <p>Data Engineer | AWS & ETL Specialist</p>
     </div>
@@ -54,7 +56,7 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">Academics & Certifications</h2>
-            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected August 2025)</p>
+            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected 2025)</p>
             <p>Relevant Coursework: Linux, Networking, Cloud Computing (AWS, Azure)</p>
             <p><strong>Ontario College Graduate Certificate in Business Analytics, Seneca Polytechnic College</strong> (Jan 2024 - Aug 2024)</p>
             <p>Relevant Coursework: Data Analytics, Statistics, Visualization</p>
@@ -83,4 +85,3 @@
     </div>
 </body>
 </html>
-
