--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="hero">
-        <img src="profile.jpg" alt="Ankit Mistry" class="profile-pic">
+        <img src="https://github.com/ankitmistry96/ankitmistry96.github.io/blob/main/profile.jpg" alt="Ankit Mistry" class="profile-pic">
         <h1>Ankit Deepak Mistry</h1>
         <p>Data Engineer | AWS & ETL Specialist</p>
     </div>
