--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">Academics & Certifications</h2>
-            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected 2025)</p>
+            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected - August 2025)</p>
             <p>Relevant Coursework: Linux, Networking, Cloud Computing (AWS, Azure)</p>
             <p><strong>Ontario College Graduate Certificate in Business Analytics, Seneca Polytechnic College</strong> (Jan 2024 - Aug 2024)</p>
             <p>Relevant Coursework: Data Analytics, Statistics, Visualization</p>
