--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="hero">
-        <img src="profile.jpg" alt="Ankit Mistry" class="profile-pic">
+        <img src="profile2.jpeg" alt="Ankit Mistry" class="profile-pic">
         <h1>Ankit Deepak Mistry</h1>
         <p>Data Engineer | AWS & ETL Specialist</p>
     </div>
@@ -42,7 +42,7 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">About Me</h2>
-            <p>I design and build <strong>scalable ETL pipelines</strong> on AWS to transform raw data into actionable insights. With hands-on experience in cloud architecture, data warehousing, and workflow automation, I help organizations unlock the full potential of their data.</p>
+            <p>I design and build <strong>scalable ETL pipelines</strong> on AWS to transform raw data into actionable insights. With hands-on experience in cloud architecture, data warehousing, and workflow automation, I help organizations unlock the full potential of their data. I also have domain knowledge in <strong>Insurance</strong>, having worked with companies like <strong>Allstate</strong> and <strong>AMICA Insurance</strong>.</p>
             <h3 class="mt-3">What I Bring to the Table</h3>
             <ul>
                 <li><strong>AWS Data Stack:</strong> Glue, Lambda, Redshift, S3, Athena, Kinesis, Step Functions, EMR</li>
@@ -56,7 +56,7 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">Academics & Certifications</h2>
-            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Expected - August 2025)</p>
+            <p><strong>Ontario College Graduate Certificate in Cloud Computing Technologies, George Brown College</strong> (Sept 2024 - Aug 2025)</p>
             <p>Relevant Coursework: Linux, Networking, Cloud Computing (AWS, Azure)</p>
             <p><strong>Ontario College Graduate Certificate in Business Analytics, Seneca Polytechnic College</strong> (Jan 2024 - Aug 2024)</p>
             <p>Relevant Coursework: Data Analytics, Statistics, Visualization</p>
