--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hero">
         <img src="profile2.jpeg" alt="Ankit Mistry" class="profile-pic">
         <h1>Ankit Deepak Mistry</h1>
-        <p>Data Engineer | AWS & ETL Specialist</p>
+        <p>Data Engineer | Cloud Enthusiast | Allstate | Vlauemomentum</p>
     </div>
 
     <div class="container mt-4">
@@ -42,7 +42,7 @@
 
         <div class="container-card mt-4">
             <h2 class="section-title">About Me</h2>
-            <p>I design and build <strong>scalable ETL pipelines</strong> on AWS to transform raw data into actionable insights. With hands-on experience in cloud architecture, data warehousing, and workflow automation, I help organizations unlock the full potential of their data. I also have domain knowledge in <strong>Insurance</strong>, having worked with companies like <strong>Allstate</strong> and <strong>AMICA Insurance</strong>.</p>
+            <p>I design and build scalable ETL pipelines on AWS to transform raw data into actionable insights. With hands-on experience in cloud architecture, data warehousing, and workflow automation, I help organizations unlock the full potential of their data. I also have domain knowledge in <strong>Insurance</strong>, having worked with companies like <strong>Allstate</strong> and <strong>AMICA Insurance</strong>.</p>
             <h3 class="mt-3">What I Bring to the Table</h3>
             <ul>
                 <li><strong>AWS Data Stack:</strong> Glue, Lambda, Redshift, S3, Athena, Kinesis, Step Functions, EMR</li>
@@ -51,6 +51,7 @@
                 <li><strong>Infrastructure as Code (IaC):</strong> Automated deployments with Terraform & CloudFormation</li>
                 <li><strong>Programming Expertise:</strong> Production-grade Python & SQL (query tuning, UDFs, partitioning)</li>
                 <li><strong>Data Reliability:</strong> Implementing data quality checks, monitoring, and metadata management</li>
+                <li><strong>Domain Experties:</strong> Insurance, Guidewire (PC, BC, CC), Real Estate</li>
             </ul>
         </div>
 
